--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
     align-items: center;
     margin-top: 100px;
 }
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+
 
 h3{
     text-align: center;
+    font-family: 'Manrope', sans-serif;
 }
 
 .music-player{
