--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 .container{
+    
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 100px;
+    font-family: 'Manrope', sans-serif;
+}
+
+body{
+    background-color: black;
 }
 @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
@@ -10,6 +16,13 @@
 h3{
     text-align: center;
     font-family: 'Manrope', sans-serif;
+    color: rgb(255, 255, 255);
+}
+
+h2{
+    text-align: center;
+    font-family: 'Manrope', sans-serif;
+    color: rgb(0, 0, 0); 
 }
 
 .music-player{
@@ -17,7 +30,8 @@ h3{
     text-align: center;
     padding: 25px 35px;
     border-radius: 15px;
-    background-color: #ffe0e5;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 #duration, #time {
