--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 100px;
+    margin-bottom: 100px;
     font-family: 'Manrope', sans-serif;
 }
 
